Tech Support, Courses and Learn Tech css added git add .!

--- a/css/learntech.css
+++ b/css/learntech.css
@@ -1,27 +1,49 @@
-/*
-====================================================================================================================================================================
-                                                    Start Learn Tech Page
-====================================================================================================================================================================
-*/
+section#learntech {
+  margin-top: 30px;
+  background-color: #055a5b4b;
+  padding: 20px 0;
+}
+section#learntech h1 {
+  text-align: center;
+  color: #59886B;
+}
+section#learntech .learntech {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 50px 0;
+}
+section#learntech .learntech .card {
+  border: 2px solid black;
+  border-radius: 5px;
+}
+section#learntech .learntech .card .card-body {
+  position: relative;
+  padding: 20px;
+}
+section#learntech .learntech .card .card-body h2 {
+  color: #26001B;
+}
+section#learntech .learntech .card .card-body h6 {
+  color: black;
+  width: 60%;
+  line-height: 30px;
+}
+section#learntech .learntech .card .card-body button {
+  background-color: transparent;
+  border: 2px solid #26001B;
+  padding: 20px;
+  position: absolute;
+  right: 15px;
+  bottom: 25px;
+  margin: auto;
+  border-radius: 15px;
+  color: black;
+  cursor: pointer;
+}
+section#learntech .learntech .card .card-body button:hover {
+  background-color: #26001B;
+  color: white;
+}
 
- 
-
-/*
-====================================================================================================================================================================
-                                                    End Learn Tech Page
-====================================================================================================================================================================
-*/
-
-/*
-====================================================================================================================================================================
-                                                    Start Footer
-====================================================================================================================================================================
-*/
-
-
-
-/*
-====================================================================================================================================================================
-                                                    End Footer
-====================================================================================================================================================================
-*/
+/*# sourceMappingURL=learntech.css.map */
