--- a/sass/global.scss
+++ b/sass/global.scss
@@ -56,7 +56,13 @@ header {
 
 footer {
 
+    // position: sticky;
+    // bottom: 0;
+    // margin: auto;
+    // width: 100%;
+
     // border: 1px solid red;
+    
     max-height: 300px;
     background-color: #1E6F5C;
 
