design complete git add .!

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,27 +1,52 @@
-/*
-====================================================================================================================================================================
-                                                    Start Contact Page
-====================================================================================================================================================================
-*/
+form {
+  border-radius: 15px;
+  width: 500px;
+  margin: 20px auto;
+  background-color: #202736;
+  padding: 40px;
+}
+form * {
+  color: #fd8168;
+}
+form h1 {
+  text-align: center;
+}
+form .input-group {
+  margin: 25px 0;
+}
+form .input-group * {
+  margin: 0;
+}
+form .input-group h3 {
+  font-size: 0.9em;
+}
+form .input-group input, form .input-group textarea {
+  width: 480px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid #323d41;
+  padding: 10px;
+}
+form .input-group input:focus, form .input-group textarea:focus {
+  outline: none;
+}
+form .input-group textarea {
+  resize: vertical;
+}
+form input[type="submit"] {
+  background-image: linear-gradient(to right, #ffa946, #f18867);
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  border-radius: 30px;
+  padding: 18px 100px;
+  border: none;
+  color: #fff;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 8px 0px #f18867;
+}
+form input[type="submit"]:hover {
+  box-shadow: 0px 0px 12px 1px #f18867;
+}
 
-
-
-/*
-====================================================================================================================================================================
-                                                    End Contact Page
-====================================================================================================================================================================
-*/
-
-/*
-====================================================================================================================================================================
-                                                    Start Footer
-====================================================================================================================================================================
-*/
-
- 
-
-/*
-====================================================================================================================================================================
-                                                    End Footer
-====================================================================================================================================================================
-*/
+/*# sourceMappingURL=contact.css.map */
