slight modification done in contact form

--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -4,6 +4,7 @@ form {
     width: 500px;
     margin: 20px auto;
     background-color: #202736;
+    box-shadow: 0 0 20px 5px #202736;
     padding: 40px;
 
     * {
